<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mainScreen"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/blue"
        app:cnb_iconColor="@color/white" />
    <item
        android:id="@+id/attend"
        android:icon="@drawable/attender"
        android:title="@string/attend"
        app:cnb_backgroundColor="@color/mofe1"
        app:cnb_iconColor="@color/white" />
    <item
        android:id="@+id/leave"
        android:icon="@drawable/leave"
        android:title="@string/leave"
        app:cnb_backgroundColor="@color/light_red"
        app:cnb_iconColor="@color/white" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:cnb_backgroundColor="@color/gold"
        app:cnb_iconColor="@color/white" />

</menu>