<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/flat_bg"
    tools:context=".employee.employee_fragments.fragment_ehome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <LinearLayout
            android:id="@+id/welcomeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lemon"
                android:gravity="center"
                android:text="@string/welcome_in_new_activity"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/tvWelcomeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:paddingHorizontal="5dp"
                android:text="ٍSir, "
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lemon"
                android:gravity="center"
                android:text="@string/wishes_a_good_day_to_start"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="35dp"
            android:gravity="center"
            android:paddingVertical="15dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardReqests"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_margin="20dp"
                android:clipToPadding="true"
                app:cardBackgroundColor="#E91E63"
                app:cardCornerRadius="15dp"
                app:cardElevation="8dp"
                app:cardPreventCornerOverlap="true"
                app:contentPadding="5dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center|top"
                    android:layout_marginVertical="5dp"
                    android:src="@drawable/ic_request" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:fontFamily="@font/coiny"
                    android:gravity="center|bottom"
                    android:shadowColor="@color/black"
                    android:text="@string/requests"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardReqestHistory"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_margin="20dp"
                android:clipToPadding="true"
                app:cardBackgroundColor="#E6C45E"
                app:cardCornerRadius="15dp"
                app:cardElevation="8dp"
                app:cardPreventCornerOverlap="true"
                app:contentPadding="5dp">

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center|top"
                    android:layout_marginVertical="5dp"
                    android:src="@drawable/ic_history1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:fontFamily="@font/coiny"
                    android:gravity="center|bottom"
                    android:shadowColor="@color/black"
                    android:text="@string/history"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>