<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".employee.employee_activities.activity_request">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="8dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/app_name"
                    android:onClick="onBackPressing"
                    android:scaleType="center"
                    android:src="@drawable/back_arrow" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center"
                    android:text="Create Request"
                    android:textAlignment="center"
                    android:textColor="@color/mofe1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hintText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:fontFamily="@font/doppio_one"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/select_request_type"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <Spinner
                    android:id="@+id/requestSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="10dp"
                    android:layout_toEndOf="@+id/hintText"
                    android:background="@drawable/custom_spinner"
                    android:backgroundTint="#777676"
                    android:contextClickable="true"
                    android:dropDownSelector="@color/white"
                    android:elevation="8dp"
                    android:gravity="center_horizontal"
                    android:paddingVertical="15dp"
                    android:textAlignment="center" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:elevation="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/casesText"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="8dp"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="5dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="400"
                    app:errorEnabled="true"
                    app:hintTextAppearance="@style/TextHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_your_cases"
                        android:maxLength="400"
                        android:imeOptions="actionNone"
                        android:maxLines="20"
                        android:padding="20dp"
                        android:singleLine="false"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="17sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:elevation="10dp">

                <Button
                    android:id="@+id/sendRequestBtn"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_btn"
                    android:elevation="10dp"
                    android:text="@string/send_request"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>