<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/perimer_color"
    tools:context=".employee.employee_fragments.fragment_emprofile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:elevation="5dp"
                android:layout_margin="10dp"
                android:src="@drawable/add_photo"
                app:civ_border_color="@color/gold"
                app:civ_border_width="2dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:elevation="8dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/backgroun_half_card"
            android:backgroundTint="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editFnamep"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:elevation="8dp"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="5dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="15"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:drawableStart="@drawable/ic_name"
                        android:elevation="8dp"
                        android:hint="@string/first_name"
                        android:imeOptions="actionDone"
                        android:inputType="textPersonName"
                        android:maxLength="15"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="17sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/imageEnabledF"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/editable_icon"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_edit" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editLnamep"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="2dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="15"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:drawableStart="@drawable/ic_name"
                        android:hint="@string/last_name"
                        android:imeOptions="actionDone"
                        android:inputType="textPersonName"
                        android:maxLength="15"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="17sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <ImageButton
                    android:id="@+id/imageEnabledL"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/editable_icon"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_edit" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editPasswordp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:elevation="2dp"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="5dp"
                    app:counterEnabled="true"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textAlignment="center"
                        android:drawableStart="@drawable/ic_pass"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="17sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <ImageButton
                    android:id="@+id/imageEnabledPass"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/editable_icon"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_edit" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/keyCountry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    app:contentColor="@color/black"
                    app:countryPreference="EG,US,FR,IT,SA,AE,,YE,AR"
                    app:defaultCode="20"
                    app:hideNameCode="true"
                    app:keyboardAutoPopOnSearch="false"
                    app:showFlag="false"
                    app:showFullName="false"
                    app:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editPhonep"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:elevation="2dp"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="5dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="13"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:hint="@string/phone_with_country_key"
                        android:imeOptions="actionDone"
                        android:inputType="phone|number"
                        android:maxLength="13"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/imageEnabledPh"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/editable_icon"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_edit" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editOriginalEmailp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="5dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/original_email"
                    android:imeOptions="actionNone"
                    android:drawableStart="@drawable/ic_email"
                    android:inputType="textEmailAddress"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="17sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editDepartp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:elevation="2dp"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="5dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/department"
                        android:imeOptions="actionNone"
                        android:inputType="text"
                        android:textAlignment="center"
                        android:drawableStart="@drawable/ic_department"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="17sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editRolep"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:elevation="2dp"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="5dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/role"
                        android:imeOptions="actionNone"
                        android:inputType="text"
                        android:drawableStart="@drawable/ic_role"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="17sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:background="@drawable/custom_btn"
                android:backgroundTint="@color/red"
                android:drawableEnd="@drawable/ic_off"
                android:fontFamily="@font/cairo_semibold"
                android:padding="10dp"
                android:text="Logout"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>